<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/editTextNickname"
            style="@style/text_edit1"
            android:drawableStart="@drawable/ic_baseline_account_box_24"
            android:drawablePadding="@dimen/dimen_40dp"
            android:ellipsize="end"
            android:hint="@string/please_enter_your_nickname"
            android:importantForAutofill="no"
            android:layout_marginTop="@dimen/dimen_28dp"
            android:inputType="textPersonName"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="TextFields" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/pageTitle"
            style="@style/label_content_large"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:padding="@dimen/dimen_8dp"
            android:textColor="@color/colorGrayDark"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:text="@string/select_an_interest"
            app:layout_constraintTop_toBottomOf="@id/editTextNickname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <RadioGroup
            android:id="@+id/rginterest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/pageTitle">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/random"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGrayDark"
                style="@style/label_content_medium"
                android:checked="true"
                android:text="@string/random"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/education"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGrayDark"
                style="@style/label_content_medium"
                android:text="@string/education"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/recreational"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGrayDark"
                style="@style/label_content_medium"
                android:text="@string/recreational"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/social"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGrayDark"
                style="@style/label_content_medium"
                android:text="@string/social"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/charity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGrayDark"
                style="@style/label_content_medium"
                android:text="@string/charity"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/diy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGrayDark"
                style="@style/label_content_medium"
                android:text="@string/diy"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/cooking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGrayDark"
                style="@style/label_content_medium"
                android:text="@string/cooking"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/relaxation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGrayDark"
                style="@style/label_content_medium"
                android:text="@string/relaxation"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/music"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGrayDark"
                style="@style/label_content_medium"
                android:text="@string/music"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/busywork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGrayDark"
                style="@style/label_content_medium"
                android:text="@string/busy_work"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/participants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGrayDark"
                style="@style/label_content_medium"
                android:text="@string/activity_based_on_participants"/>
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>