<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/main_background_color"
    tools:context=".ui.GetStartedFragment">

    <ImageView
        android:id="@+id/img_helper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        app:layout_constraintBottom_toTopOf="@+id/textViewAppName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_wave_smile" />

    <TextView
        android:id="@+id/txt_bubble_title"
        style="@style/text_bubble_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_your_phone_to_intervene"
        android:layout_marginTop="115dp"
        android:layout_marginEnd="88dp"
        android:padding="@dimen/dimen_16dp"
        android:background="@drawable/bubble_rounded"
        app:layout_constraintEnd_toEndOf="@+id/img_helper"
        app:layout_constraintTop_toTopOf="@+id/img_helper" />

    <ImageView
        android:id="@+id/img_thought_bubble_1"
        style="@style/img_thought_bubble_medium"
        android:layout_marginBottom="@dimen/dimen_4dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toTopOf="@+id/txt_bubble_title"
        app:layout_constraintEnd_toEndOf="@+id/txt_bubble_title"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toStartOf="@+id/txt_bubble_title"
        app:srcCompat="@drawable/ic_circle_white" />

    <ImageView
        android:id="@+id/img_thought_bubble_2"
        style="@style/img_thought_bubble_small"
        android:layout_marginStart="@dimen/dimen_2dp"
        android:layout_marginBottom="@dimen/dimen_4dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toTopOf="@+id/img_thought_bubble_1"
        app:layout_constraintStart_toEndOf="@+id/img_thought_bubble_1"
        app:srcCompat="@drawable/ic_circle_white" />

    <ImageView
        android:id="@+id/img_flair_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_28dp"
        android:contentDescription="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_helper"
        app:srcCompat="@drawable/ic_octagon_white" />

    <ImageView
        android:id="@+id/img_flair_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="44dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toTopOf="@+id/img_flair_1"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_circle_white" />

    <ImageView
        android:id="@+id/img_flair_3"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toTopOf="@+id/img_helper"
        app:layout_constraintEnd_toEndOf="@+id/img_helper"
        app:srcCompat="@drawable/ic_circle_white" />

    <TextView
        android:id="@+id/textViewAppName"
        style="@style/text_welcome_call_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_32dp"
        android:layout_marginBottom="@dimen/dimen_2dp"
        android:text="@string/blud"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58" />

    <TextView
        android:id="@+id/lbl_subtitle"
        style="@style/text_welcome_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_32dp"
        android:text="@string/ever_wondered_nif_your_phone_ncan_do_more"
        app:layout_constraintBottom_toTopOf="@+id/buttonGetStarted"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAppName" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonGetStarted"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/button_dark_purple_gradient"
        android:text="@string/get_started"
        android:layout_marginStart="@dimen/dimen_32dp"
        android:layout_marginEnd="@dimen/dimen_32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_subtitle"/>

</androidx.constraintlayout.widget.ConstraintLayout>